syntax = "proto3";

package cache;

service Cache {
  rpc Get (GetRequest) returns (GetReply) {}
  rpc Set (SetRequest) returns (SetReply) {}
  rpc Del (DelRequest) returns (DelReply) {}
}

message GetRequest {
  string key = 1;
}

message GetReply {
  string key = 1;
  bytes value = 2;
  string error = 3;
}

message SetRequest {
  string key = 1;
  bytes value = 2;
  int32 ttl = 3;
}
  
message SetReply {
  string error = 1;
}

message DelRequest {
  string key = 1;
}
    
message DelReply {
  string error = 1;
}